--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "firebase-admin": "~5.12.0",
     "firebase-functions": "^1.0.1",
-    "node-fetch": "^2.1.2"
+    "googleapis-async": "^2.0.0",
+    "node-fetch": "^2.1.2",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "tslint": "^5.8.0",
